# godwoken-kicker

./: .gitignore  README.md  kicker-config.toml
ckb/: ckb-miner.toml
docker/: .build.mode.env
docker/call-polyman/: entrypoint.sh
tools/: Cargo.toml
tools/src/: main.rs  utils.rs
