[package]
name = "kicker-cli"
version = "0.1.0"
authors = ["RetricSu <inneverland2013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = "2.33"
serde_json = "1.x"
anyhow = "1.0"
url = { version = "2.2", features = ["serde"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }